name:                businessposter
version:             0.1.0.0
synopsis:            businessposter Project...
homepage:            http://github.com/sordina/businessposter
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable businessposter
  main-is:             Main.hs
  build-depends:       base -any, diagrams >= 1.3, interpolatedstring-perl6 >= 0.9, diagrams-svg, diagrams-lib
  hs-source-dirs:      src
  default-language:    Haskell2010
